# paperless-mcp

./: .copier-answers.yml  .env.example  .gitattributes  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  codecov.yml  compose.yml  mkdocs.yml  pyproject.toml  server.json
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  coverage-status.yml  release.yml
docs/: configuration.md  index.md  installation.md  prompts.md
docs/deployment/: docker.md  oidc.md
docs/guides/: authentication.md  file-exchange.md
docs/superpowers/plans/: 2026-04-23-paperless-mcp.md
docs/superpowers/specs/: 2026-04-23-paperless-mcp-design.md
docs/tools/: index.md
examples/: .env.example  bearer-auth.env  compose.yml  oidc.env
packaging/: env.example  nfpm.yaml  paperless-mcp.service  test-install.sh
packaging/mcpb/: build.sh  manifest.json.in  pyproject.toml.in
packaging/mcpb/src/: server.py
packaging/scripts/: postinstall.sh  postremove.sh  preinstall.sh  preremove.sh
src/paperless_mcp/: __init__.py  _domain_config.py  _server_apps.py  _server_deps.py  cli.py  config.py  domain.py  prompts.py  resources.py  server.py  tools.py
src/paperless_mcp/client/: __init__.py  _errors.py  _http.py  correspondents.py  custom_fields.py  document_types.py  documents.py  saved_views.py  share_links.py  storage_paths.py  system.py  tags.py  tasks.py
src/paperless_mcp/models/: __init__.py  _compat.py  common.py  correspondent.py  custom_field.py  document.py  document_type.py  saved_view.py  share_link.py  storage_path.py  system.py  tag.py  task.py
src/paperless_mcp/resources/: __init__.py  collections.py  documents.py  tasks.py
src/paperless_mcp/static/: app.html
src/paperless_mcp/tools/: __init__.py  _annotations.py  _context.py  _icons.py  _registry.py  correspondents.py  custom_fields.py  document_types.py  documents.py  downloads.py  saved_views.py  share_links.py  storage_paths.py  system.py  tags.py  tasks.py
tests/: conftest.py  test_cli.py  test_smoke.py
tests/fixtures/paperless/: correspondent.json  custom_field.json  document_full.json  document_minimal.json  document_type.json  remote_version.json  saved_view.json  share_link.json  statistics.json  storage_path.json  tag.json  task_pending.json  task_success.json  tasks_page1.json
tests/integration/: conftest.py  test_smoke.py
tests/unit/: test_domain_config.py  test_server_boot.py
tests/unit/client/: test_correspondents.py  test_correspondents_write.py  test_custom_fields.py  test_custom_fields_write.py  test_document_types.py  test_document_types_write.py  test_documents_list_search.py  test_documents_read.py  test_documents_write.py  test_errors.py  test_facade.py  test_http.py  test_log_masking.py  test_pagination.py  test_readonly_resources.py  test_system.py  test_tags.py  test_tags_write.py  test_tasks.py
tests/unit/models/: test_common.py  test_correspondent.py  test_custom_field.py  test_document.py  test_document_type.py  test_readonly_resources.py  test_system.py  test_tag.py  test_task.py
tests/unit/resources/: test_collections.py  test_documents.py  test_tasks_resource.py
tests/unit/tools/: test_crud_resources.py  test_documents.py  test_downloads.py  test_icons.py  test_observability.py  test_registry.py  test_share_links.py  test_tasks.py
